trunk/NewArchive/4efaeb57b672578403af810a3bd92c18-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int bounded(int, int)’:
main.cpp:8:12: error: ‘max’ is not a member of ‘std’
     return std::max(x, y);    
            ^
main.cpp:8:24: error: ‘y’ was not declared in this scope
     return std::max(x, y);    
                        ^
main.cpp: At global scope:
main.cpp:15:23: error: expected primary-expression before ‘int’
 auto result = bounded<int, 0, 9>{};
                       ^
main.cpp:16:1: error: ‘result’ does not name a type
 result = x;
 ^
main.cpp:22:26: error: ‘at_least’ was not declared in this scope
 auto result = at_least(10)(x);
                          ^
main.cpp:22:28: error: ‘x’ was not declared in this scope
 auto result = at_least(10)(x);
                            ^
main.cpp:28:21: error: ‘boost’ has not been declared
 auto result = (0 <= boost::convolutions2::bondage::clamp{} <= 10);
                     ^
main.cpp:28:57: error: expected ‘)’ before ‘{’ token
 auto result = (0 <= boost::convolutions2::bondage::clamp{} <= 10);
                                                         ^
main.cpp:29:1: error: ‘result’ does not name a type
 result = x;
 ^
main.cpp: In function ‘int bounded(int, int)’:
main.cpp:9:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
